Fix jar file so it launches properly